--- a/index.html
+++ b/index.html
@@ -884,8 +884,21 @@
                     format: [imgWidth, imgHeight]
                 });
 
+                // NOVA LÓGICA DE NOME DO ARQUIVO
+                const now = new Date();
+                const daysOfWeek = ["Domingo", "Segunda-feira", "Terça-feira", "Quarta-feira", "Quinta-feira", "Sexta-feira", "Sábado"];
+                const dayOfWeek = daysOfWeek[now.getDay()];
+                
+                const day = String(now.getDate()).padStart(2, '0');
+                const month = String(now.getMonth() + 1).padStart(2, '0');
+                const year = now.getFullYear();
+                const weekNumber = getWeekNumber(now); // Reuse the existing function
+
+                // Filename with date and week. Using dashes for date to ensure valid filename.
+                const filename = `Resumo Colheita - ${dayOfWeek} ${day}-${month}-${year} Semana ${weekNumber} - SPG Oásis.pdf`;
+
                 pdf.addImage(imgData, 'PNG', 0, 0, imgWidth, imgHeight);
-                pdf.save(`Relatorio-SPG-Oasis-${new Date().toLocaleDateString('pt-BR').replace(/\//g, '-')}.pdf`);
+                pdf.save(filename);
 
             } catch (err) {
                 alert("Erro ao gerar PDF: " + err);
