--- a/index.html
+++ b/index.html
@@ -779,8 +779,8 @@
                     </div>
                      <div class="flex items-center gap-2">
                         <!-- Icone de Estimativas REMOVIDO -->
-                        <!-- AJUSTE: Aumentado de text-[10px] para text-xs e valor para text-sm -->
-                        <span class="text-xs font-bold text-emerald-700">${estimateLabel} <span class="text-emerald-900 text-sm font-extrabold">${est}</span></span>
+                        <!-- AJUSTE: Aumentado de text-[10px] para text-sm e valor para text-base -->
+                        <span class="text-sm font-bold text-emerald-700">${estimateLabel} <span class="text-emerald-900 text-base font-extrabold">${est}</span></span>
                     </div>
                 </div>
                 
