--- a/index.html
+++ b/index.html
@@ -800,8 +800,9 @@
                 </div>
 
                 <!-- ESTIMATIVAS MOVIDAS PARA BAIXO (ACIMA DO RODAPÉ DA MARCA) -->
-                <div class="flex justify-center items-center pt-2 border-t border-slate-100">
-                    <span class="text-sm font-bold text-emerald-700">${estimateLabel} <span class="text-emerald-900 text-base font-extrabold">${est}</span></span>
+                <!-- AJUSTE: Aumentado ainda mais: Text-2xl para o rótulo e Text-3xl para o valor -->
+                <div class="flex justify-center items-center pt-4 border-t border-slate-100"> <!-- Aumentei o pt para dar mais ar -->
+                    <span class="text-2xl font-bold text-blue-700">${estimateLabel} <span class="text-blue-900 text-3xl font-extrabold">${est}</span></span>
                 </div>
             `;
 
